--- a/blog/src/app/components/contact/contact.component.html
+++ b/blog/src/app/components/contact/contact.component.html
@@ -1,14 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Kontakt</title>
+</head>
+<body>
 <form>
   <div class="form-group">
-    <labels class="col-sm-2 col-form-label">Imię: </labels>
+    <label class="col-sm-2 col-form-label">Imię: </label>
     <input type="text" class="form-control" id="imie" placeholder="Podaj imię">
   </div>
   <div class="form-group">
-    <labels class="col-sm-2 col-form-label">Nazwisko: </labels>
+    <label class="col-sm-2 col-form-label">Nazwisko: </label>
     <input type="text" class="form-control" id="nazwisko" placeholder="Podaj nazwisko">
   </div>
   <div class="form-group">
-    <labels class="col-sm-2 col-form-label">Email: </labels>
+    <label class="col-sm-2 col-form-label">Email: </label>
     <input type="email" class="form-control" id="email" placeholder="Podaj email">
 
   </div>
@@ -58,3 +65,5 @@
 
 
 </form>
+</body>
+</html>
