--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <a class="nav-link active" [routerLink]="['/home']">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active">Blog</a>
+      <a class="nav-link active" [routerLink]="['/blog']">Blog</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" [routerLink]="['/contact']">Kontakt</a>
