--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,4 +1,5 @@
-<div *ngFor="let item of items$ | filter: filterText">
-  <blog-item [image]="item.url" [text]="item.title">
+<selectize></selectize>
+<div class="center" *ngFor="let item of items$ | filter: filterText">
+  <blog-item [id]="item.id" [image]="item.image" [text]="item.text">
   </blog-item>
 </div>
