--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -1,2 +1,2 @@
 <input [(ngModel)]="filterText" (ngModelChange)="sendFilter()"
-       placeholder="Wpisz nazwę..." id="search" type="search" class="form-control" textFormat>
+       placeholder="Wpisz nazwę..." id="search" type="search" class="form-control col-7 bar" textFormat>
