--- a/src/styles.css
+++ b/src/styles.css
@@ -61,8 +61,27 @@ form{
 }
 
 navbar{
-  margin: 0;
   padding: 0;
   background-color: burlywood;
 }
+
+selectize{
+  text-align: center;
+  width: 800px;
+  height: 500px;
+}
+
+.center{
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 10px;
+}
+
+.bar{
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  margin-bottom: 10px;
+}
+
 
