--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,5 +1,5 @@
 <selectize></selectize>
 <div class="center" *ngFor="let item of items$ | filter: filterText">
-  <blog-item [id]="item.id" [image]="item.image" [text]="item.text">
+  <blog-item [id]="item.id" [image]="item.url" [text]="item.content">
   </blog-item>
 </div>
