--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,5 +12,14 @@
     <li class="nav-item">
       <a class="nav-link active" [routerLink]="['/add-post']">Dodaj post</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link active" [routerLink]="['/login']">Login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" [routerLink]="['/singup']">Sing up</a>
+    </li>
+    <li><button (click)="logOut()" class="dropdown-item">Wyloguj</button>
+    </li>
+    
   </ul>
 </nav>
